--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<!-- Two -->
 		<section id="two" class="wrapper style1-alt fade-up">
 			<div class="inner">
-				<h2>Our Expertise</h2>
+				<h2>Expertise</h2>
 				<div class="features">
 					<section>
 						<span class="icon solid fa-code"></span>
@@ -102,6 +102,40 @@
 		</section>
 
 		
+		<!-- Two -->
+		<section id="two" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Specials</h2>
+				<div class="features">
+					<section>
+						<span class="icon solid fa-star"></span>
+						<h3>Custom Website</h3>
+						<ul>
+							<li>CMS + Custom Coding</li>
+							<li>Incl. Hosting (Lifetime)</li>
+							<li>Incl. SEO + Marketing</li>
+							<li>Incl. Yearly Refresh</li>
+							<li>Ongoing Website Support</li>
+							<li>Delivery Time Guarantee</li>
+
+						</ul>
+						<h3>$2500 NZD + GST</h3>
+					</section>
+					<section>
+						<span class="icon solid fa-star"></span>
+						<h3>Graphic Design + Marketing</h3>
+						<ul>
+							<li>Branding + Identity</li>
+							<li>Social Media Management</li>
+							<li>Digital & Print Content</li>
+							<li>Mockup Visualisations </li>
+						</ul>
+					</section>
+					
+				</div>
+			</div>
+		</section>
+
 
 		<!-- Four -->
 		<section>
